--- a/sway/waybar/style.css
+++ b/sway/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Gemini Minimal, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-family: Gemini Minimal, Source Code Pro, FontAwesome, Roboto, Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
 
